force-app/main/default/objects/WhatsAppMessagingSession__c/WhatsAppMessagingSession__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Messaging Session</label>
    <nameField>
        <displayFormat>WMS-{0000}</displayFormat>
        <label>WhatsApp Messaging Session</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Messaging Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>