force-app/main/default/objects/WhatsAppMessagingSession__c/fields/CustomerPhone__c.field-meta.xml
<CustomField>
    <fullName>CustomerPhone__c</fullName>
    <label>Customer Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>