force-app/main/default/objects/WhatsAppMessagingSession__c/fields/EndTIme__c.field-meta.xml
<CustomField>
    <fullName>EndTIme__c</fullName>
    <label>End TIme</label>
    <type>DateTime</type>
</CustomField>