force-app/main/default/objects/WhatsAppMessagingSession__c/fields/PricingBillable__c.field-meta.xml
<CustomField>
    <fullName>PricingBillable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Billable</label>
    <type>Checkbox</type>
</CustomField>