force-app/main/default/objects/WhatsAppMessagingSession__c/fields/PricingCategory__c.field-meta.xml
<CustomField>
    <fullName>PricingCategory__c</fullName>
    <label>Pricing Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>