force-app/main/default/objects/WhatsAppMessagingSession__c/fields/PricingModel__c.field-meta.xml
<CustomField>
    <fullName>PricingModel__c</fullName>
    <label>Pricing Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>