force-app/main/default/objects/WhatsAppMessagingSession__c/fields/WhatsAppMessage__c.field-meta.xml
<CustomField>
    <fullName>WhatsAppMessage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WhatsApp Message</label>
    <referenceTo>WhatsApp_Message__c</referenceTo>
    <relationshipLabel>WhatsApp Messaging Sessions</relationshipLabel>
    <relationshipName>WhatsAppMessagingSessions</relationshipName>
    <type>Lookup</type>
</CustomField>