force-app/main/default/objects/WhatsAppMessagingSession__c/fields/WhatsappUser__c.field-meta.xml
<CustomField>
    <fullName>WhatsappUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Whatsapp User</label>
    <referenceTo>WhatsappUser__c</referenceTo>
    <relationshipLabel>WhatsApp Messaging Sessions</relationshipLabel>
    <relationshipName>WhatsApp_Messaging_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>