force-app/main/default/objects/WhatsAppMessagingSession__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BusinessPhoneNumber__c</columns>
    <columns>CustomerName__c</columns>
    <columns>CustomerPhone__c</columns>
    <columns>WhatsappUser__c</columns>
    <columns>StartTime__c</columns>
    <columns>EndTIme__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>